# v1700-literary-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FILELIST.txt  README.md  RELEASE_NOTES.md  SESSION_INIT.md  SHA256SUMS.txt  STAGE153_COMPLETION_REPORT.md  STAGE155_COMPLETION_REPORT.md  STAGE156_COMPLETION_REPORT.md  STAGE156_FULL_REGRESSION_REPORT.md  STAGE157_COMPLETION_REPORT.md  STAGE158_COMPLETION_REPORT.md  STAGE159_COMPLETION_REPORT.md  STAGE160_COMPLETION_REPORT.md  STAGE162_COMPLETION_REPORT.md  STAGE163_COMPLETION_REPORT.md  STAGE164_COMPLETION_REPORT.md  STAGE165_COMPLETION_REPORT.md  STAGE166_CROSS_VALIDATION_FINAL_REPORT.md  STAGE166_HARDENING.patch  STAGE166_REGRESSION_HARDENING_REPORT.md  STAGE166_THIRD_VALIDATION.patch  STAGE166_THIRD_VALIDATION_FINAL_REPORT.md  STAGE168_1_FINAL_REPORT.md  STAGE169_COMPLETION_REPORT.md  STAGE170_COMPLETION_REPORT.md  STAGE171_COMPLETION_REPORT.md  STAGE171_VALIDATION_SUMMARY.txt  STAGE172_1_FINAL_AUDIT_REPORT.md  STAGE172_2_FINAL_AUDIT_REPORT.md  STAGE172_2_VALIDATION_SUMMARY.txt  STAGE172_3_FINAL_AUDIT_REPORT.md  STAGE172_3_VALIDATION_SUMMARY.txt  STAGE172_COMPLETION_REPORT.md  STAGE172_VALIDATION_SUMMARY.txt  STAGE173_1_PREFLIGHT_GITNEXUS_HARDENING_REPORT.md  (+25 more)
archive/: README.md
manifests/: archive_manifest.json  branchpoint_model_registry.json  branchpoint_model_registry_v2.json  change_impact_review_template.json  commercial_readiness_gap_manifest.json  commercial_readiness_gap_manifest_v2.json  core_logic_survival_matrix.json  core_logic_survival_matrix_v2.json  core_logic_survival_matrix_v3.json  file_inventory.json  gitnexus_branchpoint_bridge_manifest.json  (+429 more)
(+3450 files in other folders)
