[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "v1700-literary-os"
version = "1.30.0"
description = "V1700 Stage130 - MultiWork Release"
requires-python = ">=3.10"
authors = [{name = "V1700 Project"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
