[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "v1700-literary-os"
version = "1.33.0"
description = "V1700 Stage133 - NarrativeStateTensor 8D Measurement Layer"
requires-python = ">=3.10"
authors = [{name = "V1700 Project"}]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "tomli>=2; python_version<'3.11'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
